--- a/food_diary/core/templates/index.html
+++ b/food_diary/core/templates/index.html
@@ -9,9 +9,17 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-            color: #333;
+            background: linear-gradient(144deg,
+                rgba(175, 64, 255, 0.75),
+                rgba(91, 66, 243, 0.75) 50%,
+                rgba(0, 221, 235, 0.75)),
+                url('https://media.istockphoto.com/id/1182393436/vector/fast-food-seamless-pattern-with-vector-line-icons-of-hamburger-pizza-hot-dog-beverage.jpg?s=612x612&w=0&k=20&c=jlj-n_CNsrd13tkHwC7MVo0cGUyyc8YP6wJQdCvMUGw=');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
             min-height: 100vh;
+            color: #333;
         }
 
         .navbar {
